--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit>=1.28.0
-pandas>=1.5.0
-numpy>=1.24.0
-seaborn>=0.12.0
-plotly>=5.17.0
-matplotlib>=3.7.0
-kaleido>=0.2.1
+streamlit==1.28.0
+pandas==1.5.0
+numpy==1.24.0
+seaborn==0.12.0
+plotly==5.17.0
+matplotlib==3.7.0
+kaleido==0.2.1
